Route pour obtenir tout les projets
